[CHANGE] Removed prefixes from IFADuplication and IFADuplicationUtils Swift types.