@@ -11,6 +11,8 @@
 		10738C84775FC70F681B3852 /* LICENSE in Resources */ = {isa = PBXBuildFile; fileRef = 10738C50C5D62009136679FD /* LICENSE */; };
 		336FA09902344B05A0B5676B /* Pods_IFAFoundationTests.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = 7C1045E48743E41A2C6733B4 /* Pods_IFAFoundationTests.framework */; };
 		F7156BF11BE952FB0009EFF4 /* IFAFoundation.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = F7156BE61BE952FB0009EFF4 /* IFAFoundation.framework */; };
+		F72C559A1F40F13100CF0AD1 /* TypedNotification.swift in Sources */ = {isa = PBXBuildFile; fileRef = F72C55991F40F13100CF0AD1 /* TypedNotification.swift */; };
+		F72C559C1F40F6D800CF0AD1 /* TypedNotificationTests.swift in Sources */ = {isa = PBXBuildFile; fileRef = F72C559B1F40F6D800CF0AD1 /* TypedNotificationTests.swift */; };
 		F7650B201BE9595700B97932 /* IFAFoundation.h in Headers */ = {isa = PBXBuildFile; fileRef = F7650AFF1BE9595700B97932 /* IFAFoundation.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		F7650B211BE9595700B97932 /* IFAAssertionUtils.h in Headers */ = {isa = PBXBuildFile; fileRef = F7650B001BE9595700B97932 /* IFAAssertionUtils.h */; settings = {ATTRIBUTES = (Public, ); }; };
 		F7650B221BE9595700B97932 /* IFAAssertionUtils.m in Sources */ = {isa = PBXBuildFile; fileRef = F7650B011BE9595700B97932 /* IFAAssertionUtils.m */; };
@@ -71,6 +73,8 @@
 		F7156BEB1BE952FB0009EFF4 /* Info.plist */ = {isa = PBXFileReference; lastKnownFileType = text.plist.xml; path = Info.plist; sourceTree = "<group>"; };
 		F7156BF01BE952FB0009EFF4 /* IFAFoundationTests.xctest */ = {isa = PBXFileReference; explicitFileType = wrapper.cfbundle; includeInIndex = 0; path = IFAFoundationTests.xctest; sourceTree = BUILT_PRODUCTS_DIR; };
 		F7156BF71BE952FB0009EFF4 /* Info.plist */ = {isa = PBXFileReference; lastKnownFileType = text.plist.xml; path = Info.plist; sourceTree = "<group>"; };
+		F72C55991F40F13100CF0AD1 /* TypedNotification.swift */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.swift; path = TypedNotification.swift; sourceTree = "<group>"; };
+		F72C559B1F40F6D800CF0AD1 /* TypedNotificationTests.swift */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.swift; path = TypedNotificationTests.swift; sourceTree = "<group>"; };
 		F75C516F1BF1338B0003174D /* IFAFoundation.podspec */ = {isa = PBXFileReference; lastKnownFileType = text; name = IFAFoundation.podspec; path = ../IFAFoundation.podspec; sourceTree = "<group>"; };
 		F7650AFF1BE9595700B97932 /* IFAFoundation.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = IFAFoundation.h; sourceTree = "<group>"; };
 		F7650B001BE9595700B97932 /* IFAAssertionUtils.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = IFAAssertionUtils.h; sourceTree = "<group>"; };
@@ -175,6 +179,7 @@
 				F7156BF71BE952FB0009EFF4 /* Info.plist */,
 				1073849B78BF951ED2792918 /* NSStringTests.m */,
 				10738436D08E006D08231A13 /* DuplicationTests.swift */,
+				F72C559B1F40F6D800CF0AD1 /* TypedNotificationTests.swift */,
 			);
 			path = IFAFoundationTests;
 			sourceTree = "<group>";
@@ -216,6 +221,7 @@
 				F7650B1E1BE9595700B97932 /* NSString+IFAFoundation.h */,
 				F7650B1F1BE9595700B97932 /* NSString+IFAFoundation.m */,
 				107386EA68895DE8D0056239 /* Duplication.swift */,
+				F72C55991F40F13100CF0AD1 /* TypedNotification.swift */,
 			);
 			path = classes;
 			sourceTree = "<group>";
@@ -421,6 +427,7 @@
 				F7650B361BE9595700B97932 /* NSDate+IFAFoundation.m in Sources */,
 				F7650B401BE9595700B97932 /* NSString+IFAFoundation.m in Sources */,
 				F7650B2A1BE9595700B97932 /* IFAFoundationConstants.m in Sources */,
+				F72C559A1F40F13100CF0AD1 /* TypedNotification.swift in Sources */,
 				F7650B2E1BE9595700B97932 /* IFAUtils.m in Sources */,
 				107383259240273E375EDACC /* Duplication.swift in Sources */,
 			);
@@ -431,6 +438,7 @@
 			buildActionMask = 2147483647;
 			files = (
 				F77FF82A1C51CC4D00343884 /* NSStringTests.m in Sources */,
+				F72C559C1F40F6D800CF0AD1 /* TypedNotificationTests.swift in Sources */,
 				F7B360CB1E6951F700CDCC47 /* DuplicationTests.swift in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
